# gytmdl

./: .gitignore  README.md  pyproject.toml
cytmdl/: cli.py  downloader.py
gytmdl/: cli.py  downloader.py
