[project]
version = "1.0.0"
name = "cytmdl"
description = "A command-line app for downloading YouTube Music songs with tags from YouTube Music that allows filetype specification"
requires-python = ">=3.10"
authors = [{ name = "Cameron", email = "cameron0413@gmail.com" }]
dependencies = [
    "click",
    "colorama",
    "inquirerpy",
    "mutagen",
    "pillow",
    "yt-dlp",
    "ytmusicapi",
]
readme = "README.md"

[project.urls]
repository = "https://github.com/cameron0413/gytmdl"

[build-system]
requires = ["flit_core"]
build-backend = "flit_core.buildapi"

[project.scripts]
cytmdl = "gytmdl.cli:main"
